Added base functions to beautify, minify, and convert to and from CSV.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <title>JSON Functions</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 
 <body>
-    <p>Hello, world!</p>
-    <p>Force commit.</p>
+    <p>GUI coming TBA...</p>
 </body>
 
 </html>
