Added statusbar on output textarea, needs a more permanent solution

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p title="Version">v2.2</p>
+    <p title="Version">v2.3</p>
     <div id="l">
         <h3 title="Paste your JSON or CSV code here.">Input</h3>
         <textarea id="in" placeholder="JSON or CSV..."></textarea>
@@ -26,6 +26,7 @@
     <div id="r">
         <h3 title="Copy the output code here.">Output</h3>
         <textarea id="out" readonly></textarea>
+        <div id="statusbar">Ready</div>
     </div>
 </body>
 
